Fix alignment of tag and panel close buttons on mobile

--- a/themes/timetree/assets/scss/base/_icons.scss
+++ b/themes/timetree/assets/scss/base/_icons.scss
@@ -5,14 +5,15 @@
 */
 
 i[class^="ph-"] {
-  background-size: contain;
   display: inline-block;
   width: 1.25em;
   height: 1.25em;
   // use svg as a mask and then set background color with css
   background-color: currentColor;
   mask-size: contain;
+  mask-position: center;
   -webkit-mask-size: contain;
+  -webkit-mask-position: center;
 }
 
 .ph-info {
