--- a/themes/timetree/assets/scss/components/_panel.scss
+++ b/themes/timetree/assets/scss/components/_panel.scss
@@ -58,7 +58,7 @@ body.home main > aside {
     position: absolute;
     right: 0;
     top: $tag-height; // position below active tag
-    padding: 16px 16px 0 0;
+    padding: 16px 12px 0 0;
     width: 100%;
     text-align: right;
     cursor: pointer;
