--- a/themes/timetree/assets/scss/components/_tags.scss
+++ b/themes/timetree/assets/scss/components/_tags.scss
@@ -67,7 +67,7 @@ $tag-color: (
     float: right;
     display: inline-block;
     cursor: pointer;
-    padding: 10px;
+    padding: 12px;
     border-left: 2px solid $body-bg-color;
 
     i {
